--- a/angular-practice/src/app/app.component.html
+++ b/angular-practice/src/app/app.component.html
@@ -225,15 +225,16 @@
           <clipPath id="a"><path fill="#fff" d="M0 0h982v239H0z" /></clipPath>
         </defs>
       </svg>
-      <h1>Hello, {{ title }} !</h1>
-      <p>Congratulations! Your app is running. 🎉</p>
+      <router-outlet />
+      <!-- <h1>Hello, {{ title }} !</h1>
+      <p>Congratulations! Your app is running. 🎉</p> -->
     </div>
     <div class="divider" role="separator" aria-label="Divider"></div>
     <div class="right-side">
       <div class="pill-group">
         @for (item of [
-          { title: 'Home', link: 'http://localhost:4200/' },
-          { title: 'Counter', link: 'Counter' },
+          { title: 'Home', link: '/' },
+          { title: 'Counter', link: '/Counter' },
           { title: 'My Github', link: 'https://github.com/swoojung7' },
           { title: '상암 고깃집 몽미', link: 'https://naver.me/GBFHJpAD' },
           { title: '장범준 - 전쟁이나면', link: 'https://youtu.be/UoPg7Bt4gc0?si=iZ070qUuUbpdzQjK' },
@@ -348,4 +349,4 @@
 <!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * -->
 
 
-<router-outlet />
+<!-- <router-outlet /> -->
