--- a/angular-practice/src/app/home/home.component.html
+++ b/angular-practice/src/app/home/home.component.html
@@ -1,4 +1,3 @@
-<h1>Hello, Post_SeSAC !</h1>
-<a routerLink="/Counter">Go to Counter</a>
+<h1>Hello, {{ title }} 🎉</h1>
 
 <!-- <router-outlet /> -->
