--- a/angular-practice/src/app/counter/counter.component.html
+++ b/angular-practice/src/app/counter/counter.component.html
@@ -1,8 +1,8 @@
 <h1 align="center">{{ counter }}</h1>
-<button (click)="decreaseCounter(10)">-10</button>
-<button (click)="decreaseCounter(1)">-1</button>
-<button (click)="resetCounter()">Reset</button>
-<button (click)="increaseCounter(1)">+1</button>
-<button (click)="increaseCounter(10)">+10</button>
+<button class="counter-button minus-button" (click)="decreaseCounter(10)">-10</button>
+<button class="counter-button minus-button" (click)="decreaseCounter(1)">-1</button>
+<button class="counter-button reset-button" (click)="resetCounter()">Reset</button>
+<button class="counter-button plus-button" (click)="increaseCounter(1)">+1</button>
+<button class="counter-button plus-button" (click)="increaseCounter(10)">+10</button>
 
 <!-- <router-outlet /> -->
